@@ -95,7 +95,8 @@ public:
           if (maxt < maxy) maxt = maxy;
           if (maxt < maxz) maxt = maxz;
 
-          double eps = 1.14631e-13 * maxx * maxy * maxz * (maxt * maxt);
+          double eps = 1.246613653102727e-13 * maxx * maxy * maxz
+                     * (maxt * maxt);
 
           double det = det4x4_by_formula(ptx,pty,ptz,pt2,
                                          rtx,rty,rtz,rt2,
