@@ -1,3 +1,7 @@
+29 October 2004 Sylvain Pion
+- Static filters : the epsilons were a bit too optimistic for the
+  homogeneization formal proof.
+
 28 October 2004 Sylvain Pion
 - Static filters : the epsilons were a bit too pessimistic.
 
